# safer-streets-tooling

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENCE.md  README.md  pyproject.toml
.github/workflows/: lint-test.yml
config/: data_sources.json
src/safer_streets_tooling/: TODO.md  async_node.py  async_pipeline.py  build_db.py  config.py  data_pipeline.py  extract.py  result.py  transforms.py
src/safer_streets_tooling/datasets/: __init__.py  _common.py  base.py  boundaries.py  crime.py  crime_counts.py  greenspace.py  imd.py  land_cover.py  poi.py  retail_centres.py  roads.py  schools.py
src/safer_streets_tooling/extract/: __init__.py  base.py  boundaries.py  buildings.py  cctv.py  crime.py  food_outlets.py  greenspace.py  imd.py  land_cover.py  naptan.py  oac.py  pipeline.py  poi.py  retail_centres.py  roads.py  schools.py  streetlights.py  takeaways.py
src/safer_streets_tooling/transform/: __init__.py  base.py  building_counts.py  crime_counts.py  geo_lookups.py  geogs.py  overlap_lookups.py  pipeline.py  retail_centre_lookups.py  streetlight_counts.py
tests/: test_build_db.py  test_data_pipeline.py  test_extract_pipeline.py  test_transform_pipeline.py
