[project]
name = "safer-streets-tooling"
version = "0.1.0"
authors = [
    { name = "Andrew Smith", email = "a.p.smith@leeds.ac.uk" }
]
description = "Data-build tooling for safer-streets: per-dataset extract → GeoParquet → assemble DuckDB."
requires-python = ">=3.13"
dependencies = [
    "safer-streets-core",
    "duckdb>=1.5",
    "geopandas>=1.1.1",
    "networkx>=3.6.1",
    "odfpy>=1.4.1",
    "overturemaps>=1.0.0",
    "pandas>=3",
    "pyarrow>=21.0.0",
    "requests>=2.32.4",
    "scipy>=1.16.1",
    "shapely>=2.1.1",
    "tqdm>=4.67.1",
    "typer>=0.17.3",
]

[project.scripts]
data = "safer_streets_tooling.data_pipeline:main"

[tool.uv.sources]
safer-streets-core = { path = "../safer-streets-core", editable = true }

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9",
    "pytest-cov>=7",
    "ruff>=0.15.12",
    "ty>=0.0.34",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "--cov=src/safer_streets_tooling --cov-report html --cov-fail-under=65"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["A", "B", "E", "F", "I", "SIM", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D103"]

[tool.ty.rules]
invalid-assignment = "ignore"
unresolved-attribute = "ignore"
no-matching-overload = "ignore"
